	PR target/27880 	* unwind-c.c (PERSONALITY_FUNCTION): Ifdef use of _Unwind_GetIPInfo. 	* configure.ac (HAVE_GETIPINFO): Check for _Unwind_GetIPInfo. 	* configure: Regenerate. 	* config.in: Regenerate.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117576 138bc75d-0d04-0410-961f-82ee72b054a4